--- a/_config.yml
+++ b/_config.yml
@@ -30,13 +30,13 @@ pinterest_url:          ""
 
 
 # Theme Settings
-theme_disqus_shortname:   "ecko"
+theme_disqus_shortname:   "boborchard"
 theme_google_comments:    false
-theme_analytics_id:       "UA-28282324-1"
+theme_analytics_id:       "UA-32999775-1"
 theme_analytics_domain:   "boborchard.com"
 theme_reading_time:       true
 theme_autoload_comments:  false
-theme_always_show_nav:    false
+theme_always_show_nav:    true
 
 
 # SASS Settings
