--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ theme_analytics_id:       "UA-32999775-1"
 theme_analytics_domain:   "boborchard.com"
 theme_reading_time:       true
 theme_autoload_comments:  false
-theme_always_show_nav:    true
+theme_always_show_nav:    false
 
 
 # SASS Settings
